removed default article

--- a/_src/config.json
+++ b/_src/config.json
@@ -1,7 +1,7 @@
 {
   "output": "../",
   "locals": {
-    "url": "http://localhost:8080",
+    "url": "http://www.cheapdevotion.com",
     "name": "Inexpensive Commitment",
     "owner": "Jacob Williams",
     "description": "The idle thoughts and and crazy experiences of Jacob Williams"
